# command-line-teaching

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  genindex.html  index.html  links.html  markdown.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: index.rst.txt
_sources/howto/: course.rst.txt  module.rst.txt
_sources/navigation/: explanation.rst.txt  howto.rst.txt  reference.rst.txt
_sources/reference/: markdown.rst.txt
_sources/reference/cli-commands/: newcourse.rst.txt
_sources/tutorial/: content.rst.txt  course.rst.txt  installation.rst.txt  module.rst.txt  upload.rst.txt
docs/source/: conf.py  index.rst  links.rst  markdown.rst
docs/source/howto/: course.rst  module.rst  quiz.rst
docs/source/navigation/: explanation.rst  reference.rst  tutorial.rst
docs/source/reference/: cli.rst  markdown.rst
docs/source/reference/cli-commands/: addmod.rst  upmod.rst
docs/source/tutorial/: content.rst  course.rst  installation.rst  module.rst  upload.rst
howto/: course.html  module.html  quiz.html
navigation/: explanation.html  howto.html  reference.html  tutorial.html
reference/: cli.html  markdown.html
reference/cli-commands/: addmod.html  newcourse.html  upmod.html
src/clteaching/: __main__.py  cli.py  loaders.py  objects.py  util.py
tests/: fixtures.py  test_cli.py  test_loaders.py  test_util.py
tests/data/examples/: example-disc.html  example-qdesc.html  example-resp.yaml  example.html  example.md
tutorial/: content.html  course.html  installation.html  module.html  upload.html
(+7 files in other folders)
